--- a/cinema/user/templates/user/base.html
+++ b/cinema/user/templates/user/base.html
@@ -175,7 +175,7 @@
                     <h1>
                         Адміністратор
                     </h1>
-                    <img src="{% static 'user/images/open.svg' %}" alt="">
+                    <a href="{% url 'home' %}"><img src="{% static 'user/images/open.svg' %}" alt=""></a>
                 </div>
 
             </div>
@@ -209,7 +209,6 @@
 
 
       <!-- ----------------------CONTENT---------------------- -->
-
 
 
 
