--- a/cinema/main_page/templates/main_page/base.html
+++ b/cinema/main_page/templates/main_page/base.html
@@ -25,24 +25,36 @@
                 <li class="list_menu">
                       <img src="{% static 'main_page/images/header/Vector.svg' %}" alt="">
                 </li>
+                 {% if request.user.is_authenticated %}
                 <li class="list_menu">
                     <h4>
-                        Бодя
+                        {{ user.username }}
                     </h4>
                 </li>
+                    <li class="list_menu">
+                        <a href="{% url 'logout' %}" >
+                            <svg class="header_images" viewBox="0 0 473 512" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect width="473" height="512" fill=""/>
+                            <path d="M315.1 53.1V117.1C373.4 146.1 413.6 206.1 413.6 275.7C413.6 373.6 334.3 452.9 236.4 452.9C138.5 452.9 59.1 373.6 59.1 275.7C59.1 206.1 99.3 146.1 157.6 117.1V53.1C65.8 85.6 0 172.8 0 275.7C0 406.2 105.8 512 236.3 512C366.8 512 472.6 406.2 472.6 275.7C472.6 172.8 406.8 85.6 315.1 53.1V53.1ZM236.3 196.9C258 196.9 275.7 179.2 275.7 157.5V39.4C275.7 17.7 258.1 0 236.3 0C214.5 0 196.9 17.7 196.9 39.4V157.6C196.9 179.3 214.6 196.9 236.3 196.9V196.9Z" fill="darkred"/>
+                            </svg>
+                        </a>
+                    </li>
+
+                {% else %}
                 <li class="list_menu">
-                    <img class="header_images" src="{% static 'main_page/images/header/open.svg' %}" alt="">
-                </li>
-                <li class="list_menu">
-                    <a href="{% url 'login' %}">
+                    <a href="{% url 'login' %}" class="list_menu_a">
                         Логін
                     </a>
                 </li>
                 <li class="list_menu">
-                     <a href="{% url 'register' %}">
+                     <a href="{% url 'register' %}" class="list_menu_a">
                         Реєстрація
                     </a>
                 </li>
+                {% endif %}
+                {% if request.user.is_superuser %}
+                <a href="{% url 'user' %}" style="cursor: pointer">Admin</a>
+                {% endif %}
             </ul>
         </div>
     </div>
