--- a/cinema/user/templates/user/create_user.html
+++ b/cinema/user/templates/user/create_user.html
@@ -1,49 +1,50 @@
 {% extends 'user/base.html' %}
 {% block content %}
-          <form>
+          <form method="POST">
+              {% csrf_token %}
             <div class="creat_user_block">
                 <div>
                     <div class="flex_text">
                         <p>
                             Ім'я
                         </p>
-                        <input type="text">
+                        {{ form.username }}
                     </div>
                    <div class="flex_text">
                         <p>
                             Прізвище
                         </p>
-                        <input type="text">
+                       {{ form.last_name }}
                    </div>
                     <div class="flex_text">
                         <p>
                             Псевдонім
                         </p>
-                        <input type="text">
+                        {{ form.anonym }}
                     </div>
                     <div class="flex_text">
                         <p>
                             E-mail
                         </p>
-                        <input type="email">
+                        {{ form.email }}
                     </div>
                     <div class="flex_text">
                         <p>
                             Адреса
                         </p>
-                        <input type="text">
+                        {{ form.adress }}
                     </div>
                     <div class="flex_text">
                         <p>
                             Пароль
                         </p>
-                        <input type="text" class="input-password" id="input-password">
+                        {{ form.password1 }}
                     </div>
                     <div class="flex_text">
                         <p>
                             Номер картки
                         </p>
-                        <input type="text">
+                       {{ form.card_number }}
                     </div>
                 </div>
                 <div>
@@ -52,44 +53,29 @@
                             Язик
                         </p>
                         <div class="display_block_check">
-                            <h6>
-                                Українська
-                            </h6>
-                            <input type="radio" name="language">
+                                 {{ form.language }}
                         </div>
-                        <div class="display_block_check">
-                            <h6>
-                                Англійська
-                            </h6>
-                            <input type="radio" name="language">
-                        </div>
+
                     </div>
                     <div class="flex_text">
                         <p>
                             Стать
                          </p>
                          <div class="display_block_check">
-                            <h6>
-                                Чоловіча
-                            </h6>
-                            <input type="radio" name="gender">
+
+                            {{ form.sex }}
                         </div>
-                        <div class="display_block_check">
-                            <h6>
-                                Жіноча
-                            </h6>
-                            <input type="radio" name="gender">
-                        </div>
+
                     </div>
                     <div class="flex_text">
                         <p>
                             Телефон
                         </p>
-                        <input type="text">
+                        {{ form.phone }}
                     </div>
                    <div class="flex_text">
                         <p>
-                            День народження <input type="date" name="calendar" max="2022-12-12" min="1990-01-01">
+                            День народження {{ form.data_birthday }}
 
                         </p>
 
@@ -98,22 +84,14 @@
                         <p>
                             Місто
                         </p>
-                        <select name="user_city">
-
-                            <optgroup label="Украина">
-                              <option value="4">Київ</option>
-                              <option value="5">Харків</option>
-                              <option value="6">Львів</option>
-                            </optgroup>
-
-                          </select>
+                       {{ form.choice_city }}
                     </div>
                     <div class="button_generation">
                         <div class="flex_text">
                             <p>
                                 Повторіть пароль
                             </p>
-                            <input type="text" class="input-password" id="input-password_1" >
+                            {{ form.password2 }}
 
                         </div>
                         <button id="input-generate">
@@ -128,6 +106,8 @@
                 </button>
             </div>
           </form>
+
+
 {% endblock %}
 
 
