--- a/cinema/user/templates/user/users.html
+++ b/cinema/user/templates/user/users.html
@@ -1,8 +1,12 @@
 {% extends 'user/base.html' %}
-          {% block content %}
-          <table id="example" class="display" style="width:100%">
+{% block content %}
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.0/sweetalert.min.js"></script>
+<form action="" method="post" id="myform">
+    {% csrf_token %}
+
+    <table id="example" class="display" style="width:100%">
             <thead>
-                
                     <th data-field="code" data-sortable="true">ID</th>
                     <th data-field="value1p" data-sortable="true" data-value-type="int-percentage-plusminus">Дата реєстрації</th>
                     <th data-field="value1p" data-sortable="true" data-value-type="int-percentage-plusminus-muted">День народження</th>
@@ -13,32 +17,77 @@
                     <th data-field="value1p" data-sortable="true" data-value-type="float3-percentage-plusminus">Місто</th>
                     <th data-field="value1p" data-sortable="true" data-value-type="float3-percentage-plusminus-muted">Редагувати</th>
                     <th data-field="value1p" data-sortable="true" data-value-type="float4-percentage-plusminus">Видалити</th>
-                    
-                    
                 </tr>
             </thead>
+    {% for user in users %}
             <tbody>
                 <tr>
-                    <td>2014</td>
-                    <td>12.10.2015</td>
-                    <td>12.10.1998</td>
-                    <td>ivan@gmail.com</td>
-                    <td>3809453647892</td>
-                    <td>Іван Іванович</td>
-                    <td>Іванич</td>
-                    <td>Львів</td>
+                    <td>{{user.id}}</td>
+                    <td>{{user.date_joined}}</td>
+                    <td>{{user.data_birthday}}</td>
+                    <td>{{user.email}}</td>
+                    <td>{{user.phone}}</td>
+                    <td>{{user.username}} {{user.last_name}} </td>
+                    <td>{{user.anonym}}</td>
+                    <td>{{user.choice_city}}</td>
                     <td style="text-align: center">
-                        <a href="./create_user.html"><g transform="matrix(1 0 0 1 1056 245)" class="stencil"><svg   width="24" height="24" x="0.5" y="0.5" class="stencil--easier-to-select" style="opacity: 1; cursor:pointer"><defs></defs><rect x="0" y="0" width="24" height="24" fill="transparent" class="stencil__selection-helper"></rect><path d="M0 19.000220183636742C0 19.000220183636742 0 24.000000000000004 0 24.000000000000004 0 24.000000000000004 4.999779816354067 24.000000000000004 4.999779816354067 24.000000000000004 4.999779816354067 24.000000000000004 19.745797088054324 9.253982728272625 19.745797088054324 9.253982728272625 19.745797088054324 9.253982728272625 14.74601727170026 4.254202911909364 14.74601727170026 4.254202911909364 14.74601727170026 4.254202911909364 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742M23.612293479368137 5.387486336951702C24.129235506877283 4.867459299167845 24.129235506877283 4.027596163782973 23.612293479368137 3.507569125999116 23.612293479368137 3.507569125999116 20.4924308739632 0.38770652058844135 20.4924308739632 0.38770652058844135 19.972403836190665-0.12923550686281438 19.13254070078661-0.12923550686281438 18.612513663014074 0.38770652058844135 18.612513663014074 0.38770652058844135 16.172621112633287 2.8275990709737133 16.172621112633287 2.8275990709737133 16.172621112633287 2.8275990709737133 21.17240092898735 7.827378887336974 21.17240092898735 7.827378887336974 21.17240092898735 7.827378887336974 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702" stroke-width="0" stroke="none" stroke-dasharray="none" stroke-dashoffset="none" fill="rgb(0,0,0)" fill-rule="evenOdd"></path></svg></g></a>
+                        <a href="{% url 'update_user' user.id %}"><g transform="matrix(1 0 0 1 1056 245)" class="stencil"><svg   width="24" height="24" x="0.5" y="0.5" class="stencil--easier-to-select" style="opacity: 1; cursor:pointer"><defs></defs><rect x="0" y="0" width="24" height="24" fill="transparent" class="stencil__selection-helper"></rect><path d="M0 19.000220183636742C0 19.000220183636742 0 24.000000000000004 0 24.000000000000004 0 24.000000000000004 4.999779816354067 24.000000000000004 4.999779816354067 24.000000000000004 4.999779816354067 24.000000000000004 19.745797088054324 9.253982728272625 19.745797088054324 9.253982728272625 19.745797088054324 9.253982728272625 14.74601727170026 4.254202911909364 14.74601727170026 4.254202911909364 14.74601727170026 4.254202911909364 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742 0 19.000220183636742M23.612293479368137 5.387486336951702C24.129235506877283 4.867459299167845 24.129235506877283 4.027596163782973 23.612293479368137 3.507569125999116 23.612293479368137 3.507569125999116 20.4924308739632 0.38770652058844135 20.4924308739632 0.38770652058844135 19.972403836190665-0.12923550686281438 19.13254070078661-0.12923550686281438 18.612513663014074 0.38770652058844135 18.612513663014074 0.38770652058844135 16.172621112633287 2.8275990709737133 16.172621112633287 2.8275990709737133 16.172621112633287 2.8275990709737133 21.17240092898735 7.827378887336974 21.17240092898735 7.827378887336974 21.17240092898735 7.827378887336974 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702 23.612293479368137 5.387486336951702" stroke-width="0" stroke="none" stroke-dasharray="none" stroke-dashoffset="none" fill="rgb(0,0,0)" fill-rule="evenOdd"></path></svg></g></a>
                     </td>
                     <td style="text-align: center">
-                        <svg width="19" height="24" x="0.5" y="0.5" class="stencil--easier-to-select" style="opacity: 1;cursor:pointer"><defs></defs><rect x="0" y="0" width="19" height="24" fill="transparent" class="stencil__selection-helper"></rect><path d="M1.3571428571428559 21.333333333333332C1.3571428571428559 22.8 2.578571428571429 24 4.071428571428571 24 4.071428571428571 24 14.928571428571429 24 14.928571428571429 24 16.42142857142857 24 17.642857142857146 22.8 17.642857142857146 21.333333333333332 17.642857142857146 21.333333333333332 17.642857142857146 5.333333333333332 17.642857142857146 5.333333333333332 17.642857142857146 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332M19 1.333333333333333C19 1.333333333333333 14.250000000000002 1.333333333333333 14.250000000000002 1.333333333333333 14.250000000000002 1.333333333333333 12.892857142857144 0 12.892857142857144 0 12.892857142857144 0 6.107142857142858 0 6.107142857142858 0 6.107142857142858 0 4.75 1.333333333333333 4.75 1.333333333333333 4.75 1.333333333333333 0 1.333333333333333 0 1.333333333333333 0 1.333333333333333 0 4 0 4 0 4 19 4 19 4 19 4 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333" stroke-width="0" stroke="none" stroke-dasharray="none" stroke-dashoffset="none" fill="rgb(0,0,0)" fill-rule="evenOdd"></path></svg>
+                        <a href="{% url 'delete_user' user.id %}"  >
+                           <button type="submit" class="show_confirm" onclick="confirm()"><svg width="19" height="24" x="0.5" y="0.5" class="stencil--easier-to-select" style="opacity: 1;cursor:pointer"><defs></defs><rect x="0" y="0" width="19" height="24" fill="transparent" class="stencil__selection-helper"></rect><path d="M1.3571428571428559 21.333333333333332C1.3571428571428559 22.8 2.578571428571429 24 4.071428571428571 24 4.071428571428571 24 14.928571428571429 24 14.928571428571429 24 16.42142857142857 24 17.642857142857146 22.8 17.642857142857146 21.333333333333332 17.642857142857146 21.333333333333332 17.642857142857146 5.333333333333332 17.642857142857146 5.333333333333332 17.642857142857146 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 5.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332 1.3571428571428559 21.333333333333332M19 1.333333333333333C19 1.333333333333333 14.250000000000002 1.333333333333333 14.250000000000002 1.333333333333333 14.250000000000002 1.333333333333333 12.892857142857144 0 12.892857142857144 0 12.892857142857144 0 6.107142857142858 0 6.107142857142858 0 6.107142857142858 0 4.75 1.333333333333333 4.75 1.333333333333333 4.75 1.333333333333333 0 1.333333333333333 0 1.333333333333333 0 1.333333333333333 0 4 0 4 0 4 19 4 19 4 19 4 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333 19 1.333333333333333" stroke-width="0" stroke="none" stroke-dasharray="none" stroke-dashoffset="none" fill="rgb(0,0,0)" fill-rule="evenOdd"></path></svg>
+                        </button>
+                        </a>
                     </td>
                 </tr>
-                
-                
             </tbody>
+    {% endfor %}
             </table>
-      {% endblock %}
+
+</form>
+
+<!--<script type="text/javascript">-->
+<!--$('.show_confirm').click(function(event) {-->
+<!--    var form =  $(this).closest("form");-->
+<!--    var name = $(this).data("name");-->
+<!--    event.preventDefault();-->
+<!--    swal({-->
+<!--        title: `Are you sure you want to delete this user?`,-->
+<!--        text: "If you delete this, it will be gone forever.",-->
+<!--        icon: "warning",-->
+<!--        buttons: true,-->
+<!--        dangerMode: true,-->
+<!--    })-->
+<!--    .then((willDelete) => {-->
+<!--        if (willDelete) {-->
+<!--            form.submit();-->
+<!--        }-->
+<!--    });-->
+<!--});-->
+<!--</script>-->
+
+<script>
+    function confirm() {
+        swal({
+                title: 'warning!',
+                text: 'do you want to delete?',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                cancelButtonText: 'no',
+                confirmButtonText: 'yes'
+            },
+            function (isConfirm) {
+                if (isConfirm) {
+                    document.querySelector('#myform').submit();
+                }
+            })
+    }
+</script>
+
+{% endblock content %}
+
 
 
 
